# KGReasoning

./: .gitignore  CQD.md  LICENSE  README.md  create_queries.py  example.sh  main.py  models.py  setup.cfg
cqd/: __init__.py  base.py  dataloader.py  discrete.py  util.py
src/kgreasoning/: dataloader.py  main.py  models.py  util.py
