##########################
# Setup.py Configuration #
##########################
[metadata]
name = kgreasoning
version = 0.0.1-dev

# URLs associated with the project
url = https://github.com/snap-stanford/KGReasoning
download_url = https://github.com/snap-stanford/KGReasoning/releases
project_urls =
    Bug Tracker = https://github.com/snap-stanford/KGReasoning/issues
    Source Code = https://github.com/snap-stanford/KGReasoning

# Author information
author = Hongyu Ren
author_email = hyren@cs.stanford.edu

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
install_requires =
    torch
    tqdm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kgreasoning = kgreasoning.main:main
